# dsa-visualizer

./: .gitignore  REACT_LEARNING_GUIDE.md  README.md  SETUP_REACT.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
app/: __init__.py
app/api/: gemini_api.py
app/models/: __init__.py  binary_tree.py  hashtable_chaining.py  hashtable_linear.py  queue.py  singly_linkedlist.py  stack.py
app/models/binarytrees/: __init__.py  avl.py  bst.py  splay.py
app/models/hashing/: __init__.py  hashtable_chaining.py  hashtable_linear.py  hashtable_quadratic.py
app/routes/: binary_tree_routes.py  chaning_routes.py  hashtable_routes.py  pages.py  queue_routes.py  singly_linkedlist_routes.py  stack_routes.py
app/templates/: algorithms.html  contact.html  contributions.html  hashtable_linear.html  index.html  linkedlist.html  queue.html  stack.html
data_structures/: __init__.py  hashtable_linear.py  stack.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
routes/: hashtable_routes.py  pages.py  queue_routes.py  singly_linkedlist_routes.py  stack_routes.py
src/: __init__.py  app.py
src/algorithms/: __init__.py
src/config/: __init__.py  settings.py
src/screens/: __init__.py  main_menu.py  stack_screen.py
src/ui/: __init__.py  button.py  input_box.py  menu_card.py
src/visualizers/: __init__.py  stack_renderer.py
static/css/: base.css  cards.css  code-tabs.css  forms.css  hashtable.css  icons.css  info.css  layout.css  linkedlist.css  queue.css  stack.css  style.css  variables.css
static/js/: code-tabs.js  hashtable_linear.js  linkedlist.js  main.js  queue.js  stack.js
templates/: hashtable_linear.html  index.html  linkedlist.html  queue.html  stack.html
tests/: test_stack.py
(+132 files in other folders)
